--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "zach",
-	"version": "3.2.0",
+	"version": "2.2.13"
 	"description": "remade by zach",
 	"main": "zach.js",
 	"scripts": {
