--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "eventDisabled": [],
     "OWNER": "NAME MO",
     "MADE": "",
-    "version": "2.2.14",
+    "version": "2.2.15",
     "BOTNAME": "NAME NG BOT MO",
     "PREFIX": "PREIFX MO KUNG PANO MO TATAWAGIN",
     "ADMINBOT": [
@@ -35,6 +35,9 @@
     "help": {
         "autoUnsend": "",
         "delayUnsend": 20
+    },
+    "weather": {
+        "OPEN_WEATHER": "c4ef85b93982d6627681b056e24bd438"
     },
     "adminNoti": {
         "autoUnsend": true,
