--- a/config.json
+++ b/config.json
@@ -3,11 +3,12 @@
     "autoCreateDB": true,
     "allowInbox": true,
     "autoClean": true,
+    "maintenance": false, 
     "commandDisabled": [],
     "eventDisabled": [],
     "OWNER": "NAME MO",
     "MADE": "",
-    "version": "2.2.15",
+    "version": "2.2.16",
     "BOTNAME": "NAME NG BOT MO",
     "PREFIX": "PREIFX MO KUNG PANO MO TATAWAGIN",
     "ADMINBOT": [
